fix(styles): ensure images and icons styles apply correctly on mobile. 2

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -87,15 +87,15 @@
     position: absolute;
     top: 50px;
     right: 10px;
-    width: 30px;
+    width: 20px;
     height: auto;
   }
 
   .zigzag {
     position: absolute;
-    left: -10px;
+    left: 20px;
     top: 50px;
-    width: 25px;
+    width: 15px;
     height: auto;
   }
 
@@ -105,20 +105,24 @@
     left: 50%;
     // transform: translateX(-50%);
     color: #ff4d4d;
-    width: 20px;
+    width: 15px;
     height: auto;
   }
 
   .circles {
     position: absolute;
-    top: 290px;
+    top: 300px;
     left: 45%;
+    width: 80px;
+    height: auto;
   }
 
   .ellipse {
     position: absolute;
-    top: 320px;
-    left: 10%;
+    top: 300px;
+    left: 0;
+    width: 25px;
+    height: auto;
   }
 
   .hero-inner {
